--- a/packages/matchstick/package.json
+++ b/packages/matchstick/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@graphprotocol/graph-matchstick",
   "version": "0.0.1",
+  "repository": {
+    "url": "https://github.com/graphprotocol/graph-tooling"
+  },
   "license": "MIT",
+  "packageManager": "pnpm@9.5.0",
   "engines": {
     "node": ">= 10"
   },
@@ -20,17 +24,19 @@
     "@napi-rs/cli": "3.0.0-alpha.59",
     "ava": "^6.1.3"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "ava": {
     "timeout": "3m"
   },
   "napi": {
     "name": "graph-matchstick",
-        "targets": [
+    "targets": [
       "x86_64-apple-darwin",
       "aarch64-apple-darwin",
       "x86_64-unknown-linux-gnu",
       "x86_64-pc-windows-msvc"
     ]
-  },
-  "packageManager": "pnpm@9.5.0"
+  }
 }
