--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ on:
       - '**/*.gitignore'
       - .editorconfig
       - docs/**
+  pull_request:
+    branches:
+      - main
 
 permissions: write-all
 
