--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,38 @@ jobs:
       - name: Lint
         run: pnpm lint
 
+  build-matchstick:
+    name: Build Matchstick
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: 1.68.0
+
+      - uses: the-guild-org/shared-config/setup@main
+        name: Setup Env
+        with:
+          nodeVersion: 20
+          packageManager: pnpm
+          packageManagerVersion: 9.5.0
+
+      - name: Install Dependencies
+        run: pnpm install
+
+      - name: Build Matchstick Package
+        run: pnpm --filter=@graphprotocol/graph-matchstick build
+
+      - name: Upload Matchstick Build Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: matchstick-build
+          path: |
+            packages/matchstick/graph-matchstick.*.node
+            packages/matchstick/index.js
+
   cli:
     name: CLI / nodejs v${{ matrix.node-version }}
     runs-on: ubuntu-latest
@@ -36,6 +68,12 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
+      - name: Download Matchstick Build Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: matchstick-build
+          path: packages/matchstick/
 
       - uses: the-guild-org/shared-config/setup@main
         name: Setup Env
@@ -67,6 +105,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Download Matchstick Build Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: matchstick-build
+          path: packages/matchstick/
+
       - uses: the-guild-org/shared-config/setup@main
         name: Setup Env
         with:
@@ -94,6 +138,12 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
+      - name: Download Matchstick Build Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: matchstick-build
+          path: packages/matchstick/
 
       - uses: the-guild-org/shared-config/setup@main
         name: Setup Env
