--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: 1.68.0
+          toolchain: 1.73.0
 
       - uses: the-guild-org/shared-config/setup@main
         name: Setup Env
@@ -45,6 +45,12 @@ jobs:
 
       - name: Install Dependencies
         run: pnpm install
+
+      - name: Install matchstick system dependencies
+        working-directory: packages/matchstick
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install libpq-dev protobuf-compiler
 
       - name: Build Matchstick Package
         run: pnpm --filter=@graphprotocol/graph-matchstick build
