--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
   cli:
     name: CLI / nodejs v${{ matrix.node-version }}
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: [lint, build-matchstick]
     strategy:
       fail-fast: false
       matrix:
@@ -105,7 +105,7 @@ jobs:
 
   event-handler:
     name: Ethereum Basic Event Handlers
-    needs: [lint]
+    needs: [lint, build-matchstick]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -139,7 +139,7 @@ jobs:
 
   ts:
     name: Graph TS
-    needs: [lint]
+    needs: [lint, build-matchstick]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
