--- a/packages/matchstick/npm/darwin-x64/package.json
+++ b/packages/matchstick/npm/darwin-x64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-graph-tooling-matchstick-darwin-x64",
+  "name": "@graphprotocol/the-graph-matchstick-darwin-x64",
   "version": "0.0.1",
   "repository": {
     "url": "https://github.com/graphprotocol/graph-tooling"
