--- a/packages/matchstick/npm/linux-x64-gnu/package.json
+++ b/packages/matchstick/npm/linux-x64-gnu/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-graph-tooling-matchstick-linux-x64-gnu",
+  "name": "@graphprotocol/the-graph-matchstick-linux-x64-gnu",
   "version": "0.0.1",
   "repository": {
     "url": "https://github.com/graphprotocol/graph-tooling"
