run scope exports after build

--- a/packages/matchstick/package.json
+++ b/packages/matchstick/package.json
@@ -13,7 +13,7 @@
   "types": "index.d.ts",
   "scripts": {
     "artifacts": "napi artifacts",
-    "build": "napi build --platform --release",
+    "build": "napi build --platform --release && node scope-exports.js",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
     "universal": "napi universal",
