--- a/packages/matchstick/package.json
+++ b/packages/matchstick/package.json
@@ -34,8 +34,16 @@
     "targets": [
       "x86_64-apple-darwin",
       "aarch64-apple-darwin",
-      "x86_64-unknown-linux-gnu",
-      "x86_64-pc-windows-msvc"
-    ]
+      "x86_64-unknown-linux-gnu"
+    ],
+    "export-mapping": {
+      "testing": [
+        "runTests"
+      ],
+      "validation": [
+        "areNumbersEqual",
+        "some_validation"
+      ]
+    }
   }
 }
