--- a/packages/matchstick/npm/linux-x64-gnu/package.json
+++ b/packages/matchstick/npm/linux-x64-gnu/package.json
@@ -14,9 +14,9 @@
   "os": [
     "linux"
   ],
-  "main": "the-graph-tooling-matchstick.linux-x64-gnu.node",
+  "main": "raph-tooling-napi-utils.linux-x64-gnu.node",
   "files": [
-    "the-graph-tooling-matchstick.linux-x64-gnu.node"
+    "raph-tooling-napi-utils.linux-x64-gnu.node"
   ],
   "publishConfig": {
     "access": "public"
