--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Lint
         run: pnpm lint
 
-  build-matchstick:
-    name: Build Matchstick
+  build-napi-utils:
+    name: Build Napi Utils
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -47,27 +47,27 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
-      - name: Install matchstick system dependencies
+      - name: Install testing util system dependencies
         working-directory: packages/napi-utils
         run: |
           sudo apt-get update
           sudo apt-get -y install libpq-dev protobuf-compiler
 
-      - name: Build Matchstick Package
+      - name: Build Napi Utils Package
         run: pnpm --filter=@graphprotocol/graph-tooling-napi-utils build
 
-      - name: Upload Matchstick Build Artifacts
+      - name: Upload Napi Utils Build Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: matchstick-build
+          name: napi-utils-build
           path: |
-            packages/napi-utils/graph-matchstick.*.node
+            packages/napi-utils/graph-napi-utils.*.node
             packages/napi-utils/index.js
 
   cli:
     name: CLI / nodejs v${{ matrix.node-version }}
     runs-on: ubuntu-latest
-    needs: [lint, build-matchstick]
+    needs: [lint, build-napi-utils]
     strategy:
       fail-fast: false
       matrix:
@@ -76,10 +76,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Download Matchstick Build Artifacts
+      - name: Download Napi Utils Build Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: matchstick-build
+          name: napi-utils-build
           path: packages/napi-utils/
 
       - uses: the-guild-org/shared-config/setup@main
@@ -106,16 +106,16 @@ jobs:
 
   event-handler:
     name: Ethereum Basic Event Handlers
-    needs: [lint, build-matchstick]
+    needs: [lint, build-napi-utils]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Download Matchstick Build Artifacts
+      - name: Download Napi Utils Build Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: matchstick-build
+          name: napi-utils-build
           path: packages/napi-utils/
 
       - uses: the-guild-org/shared-config/setup@main
@@ -140,16 +140,16 @@ jobs:
 
   ts:
     name: Graph TS
-    needs: [lint, build-matchstick]
+    needs: [lint, build-napi-utils]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Download Matchstick Build Artifacts
+      - name: Download Napi Utils Build Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: matchstick-build
+          name: napi-utils-build
           path: packages/napi-utils/
 
       - uses: the-guild-org/shared-config/setup@main
