--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,28 +12,30 @@ on:
       - .editorconfig
       - docs/**
 
-  # pull_request:
+  pull_request:
 
 permissions: write-all
 
 env:
   RELEASE_COMMIT_MSG: 'chore(release): update monorepo packages versions'
   DEBUG: napi:*
-  APP_NAME: graph-matchstick
+  APP_NAME: graph-napi-utils
   MACOSX_DEPLOYMENT_TARGET: '10.13'
 jobs:
-  # Matchstick
-  build-matchstick:
+  # napi-utils
+  build-napi-utils:
     strategy:
       fail-fast: false
       matrix:
         settings:
           - host: macos-latest
             target: x86_64-apple-darwin
+            architecture: x64
             build: |
               pnpm build
           - host: macos-latest
             target: aarch64-apple-darwin
+            architecture: arm64
             build: |
               pnpm build --target aarch64-apple-darwin
               strip -x *.node
@@ -169,11 +171,11 @@ jobs:
           path: packages/napi-utils/${{ env.APP_NAME }}.*.node
           if-no-files-found: error
 
-  publish-matchstick:
+  publish-napi-utils:
     name: publish to npm
     runs-on: ubuntu-latest
     needs:
-      - build-matchstick
+      - build-napi-utils
     steps:
       - uses: actions/checkout@v4
       - name: setup pnpm
@@ -218,7 +220,7 @@ jobs:
   # stable:
   #   name: Stable
   #   runs-on: ubuntu-latest
-  #   needs: publish-matchstick
+  #   needs: publish-napi-utils
   #   steps:
   #     - name: Checkout
   #       uses: actions/checkout@v4
