--- a/packages/napi-utils/npm/linux-x64-gnu/package.json
+++ b/packages/napi-utils/npm/linux-x64-gnu/package.json
@@ -14,9 +14,9 @@
   "os": [
     "linux"
   ],
-  "main": "graph-napi-utils.darwin.linux-x64-gnu.node",
+  "main": "graph-napi-utils.linux-x64-gnu.node",
   "files": [
-    "graph-napi-utils.darwin.linux-x64-gnu.node"
+    "graph-napi-utils.linux-x64-gnu.node"
   ],
   "publishConfig": {
     "access": "public"
