--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,12 @@ jobs:
       fail-fast: false
       matrix:
         settings:
-          - host: macos-latest
+          - host: macos-latest-large
             target: x86_64-apple-darwin
             architecture: x64
             build: |
               pnpm build --target x86_64-apple-darwin
-          - host: macos-14
+          - host: macos-latest
             target: aarch64-apple-darwin
             build: |
               pnpm build --target aarch64-apple-darwin
@@ -102,7 +102,7 @@ jobs:
           architecture: x86
 
       - name: Install Protobuf on macOS
-        if: matrix.settings.host == 'macos-latest' || matrix.settings.host == 'macos-14'
+        if: matrix.settings.host == 'macos-latest-large' || matrix.settings.host == 'macos-latest'
         run: brew install protobuf
 
       - name: Install Protobuf on Windows
@@ -140,16 +140,16 @@ jobs:
           echo '/usr/local/openssl-1.1.1o/lib' | sudo tee -a /etc/ld.so.conf.d/openssl-1.1.1o.conf
           sudo ldconfig
       - name: Set PROTOC environment variable on macOS
-        if: matrix.settings.host == 'macos-latest' || matrix.settings.host == 'macos-14'
+        if: matrix.settings.host == 'macos-latest-large' || matrix.settings.host == 'macos-latest'
         run: echo 'export PROTOC=/usr/local/bin/protoc' >> $GITHUB_ENV
 
       - name: Install OpenSSL on macOS
-        if: matrix.settings.host == 'macos-latest' || matrix.settings.host == 'macos-14'
+        if: matrix.settings.host == 'macos-latest-large' || matrix.settings.host == 'macos-latest'
         run: |
           brew install openssl
           echo 'export OPENSSL_DIR=$(brew --prefix openssl@1.1)' >> $GITHUB_ENV
       - name: Install PostgreSQL on macOS
-        if: matrix.settings.host == 'macos-latest' || matrix.settings.host == 'macos-14'
+        if: matrix.settings.host == 'macos-latest-large' || matrix.settings.host == 'macos-latest'
         run: |
           brew install postgresql
           echo 'export LDFLAGS="-L/usr/local/opt/postgresql/lib"' >> $GITHUB_ENV
