--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,6 @@ on:
       - .editorconfig
       - docs/**
 
-  pull_request:
-
 permissions: write-all
 
 env:
@@ -216,44 +214,44 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   # CLI
-  # stable:
-  #   name: Stable
-  #   runs-on: ubuntu-latest
-  #   needs: publish-napi-utils
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #     - name: Setup environment
-  #       uses: the-guild-org/shared-config/setup@main
-  #       with:
-  #         nodeVersion: 20
-  #         packageManager: pnpm
-  #         packageManagerVersion: 9.1.0
+  stable:
+    name: Stable
+    runs-on: ubuntu-latest
+    needs: publish-napi-utils
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup environment
+        uses: the-guild-org/shared-config/setup@main
+        with:
+          nodeVersion: 20
+          packageManager: pnpm
+          packageManagerVersion: 9.1.0
 
-  #     - name: Set variables
-  #       id: vars
-  #       run: |
-  #         echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-  #         echo "date=$(date +"%B %d, %Y")" >> $GITHUB_OUTPUT
-  #     - name: Build
-  #       if: ${{ startsWith(github.event.head_commit.message, env.RELEASE_COMMIT_MSG) }}
-  #       run: pnpm --filter=@graphprotocol/graph-cli build
-  #     - name: Pack binaries
-  #       if: ${{ startsWith(github.event.head_commit.message, env.RELEASE_COMMIT_MSG) }}
-  #       run: pnpm --filter=@graphprotocol/graph-cli oclif:pack
-  #     - name: Release / pull_request
-  #       uses: dotansimha/changesets-action@v1.5.0
-  #       with:
-  #         publish: pnpm release
-  #         version: pnpm changeset version
-  #         commit: ${{ env.RELEASE_COMMIT_MSG }}
-  #         title: Upcoming Release Changes
-  #         createGithubReleases: true
-  #         githubReleaseName: ${{ steps.vars.outputs.date }}
-  #         githubReleaseAssets: packages/cli/dist/*.tar.gz
-  #       env:
-  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set variables
+        id: vars
+        run: |
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "date=$(date +"%B %d, %Y")" >> $GITHUB_OUTPUT
+      - name: Build
+        if: ${{ startsWith(github.event.head_commit.message, env.RELEASE_COMMIT_MSG) }}
+        run: pnpm --filter=@graphprotocol/graph-cli build
+      - name: Pack binaries
+        if: ${{ startsWith(github.event.head_commit.message, env.RELEASE_COMMIT_MSG) }}
+        run: pnpm --filter=@graphprotocol/graph-cli oclif:pack
+      - name: Release / pull_request
+        uses: dotansimha/changesets-action@v1.5.0
+        with:
+          publish: pnpm release
+          version: pnpm changeset version
+          commit: ${{ env.RELEASE_COMMIT_MSG }}
+          title: Upcoming Release Changes
+          createGithubReleases: true
+          githubReleaseName: ${{ steps.vars.outputs.date }}
+          githubReleaseAssets: packages/cli/dist/*.tar.gz
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
