--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -40,11 +40,8 @@ jobs:
         with:
           toolchain: 1.77.0
 
-      - name: Install dependencies
-        working-directory: packages/napi-utils
-        run: |
-          sudo apt-get update
-          sudo apt-get -y install libpq-dev protobuf-compiler
+      - name: Install Protobuf on macOS
+        run: brew install protobuf
 
       - name: Run tests
         working-directory: packages/napi-utils
@@ -73,10 +70,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: 1.77.0
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get -y install libpq-dev protobuf-compiler
+      - name: Install Protobuf on macOS
+        run: brew install protobuf
       - name: install clippy
         working-directory: packages/napi-utils
         run: rustup component add clippy
