--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,12 @@ on:
       - '**/*.gitignore'
       - .editorconfig
       - docs/**
+  pull_request:
 
 permissions: write-all
 
 env:
-  RELEASE_COMMIT_MSG: 'chore(release): update monorepo packages versions'
+  # RELEASE_COMMIT_MSG: 'chore(release): update monorepo packages versions'
   DEBUG: napi:*
   APP_NAME: graph-napi-utils
   MACOSX_DEPLOYMENT_TARGET: '10.13'
@@ -168,6 +169,46 @@ jobs:
           path: packages/napi-utils/${{ env.APP_NAME }}.*.node
           if-no-files-found: error
 
+  build-napi-utils-universal-macOS:
+    name: Build universal macOS binary
+    needs:
+      - build-napi-utils
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install
+        working-directory: packages/napi-utils
+
+      - name: Download macOS x64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: bindings-x86_64-apple-darwin
+          path: packages/napi-utils/artifacts
+
+      - name: Download macOS arm64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: bindings-aarch64-apple-darwin
+          path: packages/napi-utils/artifacts
+
+      - name: Combine binaries
+        working-directory: packages/napi-utils
+        run: pnpm universal
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-universal-apple-darwin
+          path: packages/napi-utils/${{ env.APP_NAME }}.*.node
+          if-no-files-found: error
+
   publish-napi-utils:
     name: publish to npm
     runs-on: ubuntu-latest
@@ -214,44 +255,44 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   # CLI
-  stable:
-    name: Stable
-    runs-on: ubuntu-latest
-    needs: publish-napi-utils
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Setup environment
-        uses: the-guild-org/shared-config/setup@main
-        with:
-          nodeVersion: 20
-          packageManager: pnpm
-          packageManagerVersion: 9.1.0
+  # stable:
+  #   name: Stable
+  #   runs-on: ubuntu-latest
+  #   needs: publish-napi-utils
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Setup environment
+  #       uses: the-guild-org/shared-config/setup@main
+  #       with:
+  #         nodeVersion: 20
+  #         packageManager: pnpm
+  #         packageManagerVersion: 9.1.0
 
-      - name: Set variables
-        id: vars
-        run: |
-          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-          echo "date=$(date +"%B %d, %Y")" >> $GITHUB_OUTPUT
-      - name: Build
-        if: ${{ startsWith(github.event.head_commit.message, env.RELEASE_COMMIT_MSG) }}
-        run: pnpm --filter=@graphprotocol/graph-cli build
-      - name: Pack binaries
-        if: ${{ startsWith(github.event.head_commit.message, env.RELEASE_COMMIT_MSG) }}
-        run: pnpm --filter=@graphprotocol/graph-cli oclif:pack
-      - name: Release / pull_request
-        uses: dotansimha/changesets-action@v1.5.0
-        with:
-          publish: pnpm release
-          version: pnpm changeset version
-          commit: ${{ env.RELEASE_COMMIT_MSG }}
-          title: Upcoming Release Changes
-          createGithubReleases: true
-          githubReleaseName: ${{ steps.vars.outputs.date }}
-          githubReleaseAssets: packages/cli/dist/*.tar.gz
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Set variables
+  #       id: vars
+  #       run: |
+  #         echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+  #         echo "date=$(date +"%B %d, %Y")" >> $GITHUB_OUTPUT
+  #     - name: Build
+  #       if: ${{ startsWith(github.event.head_commit.message, env.RELEASE_COMMIT_MSG) }}
+  #       run: pnpm --filter=@graphprotocol/graph-cli build
+  #     - name: Pack binaries
+  #       if: ${{ startsWith(github.event.head_commit.message, env.RELEASE_COMMIT_MSG) }}
+  #       run: pnpm --filter=@graphprotocol/graph-cli oclif:pack
+  #     - name: Release / pull_request
+  #       uses: dotansimha/changesets-action@v1.5.0
+  #       with:
+  #         publish: pnpm release
+  #         version: pnpm changeset version
+  #         commit: ${{ env.RELEASE_COMMIT_MSG }}
+  #         title: Upcoming Release Changes
+  #         createGithubReleases: true
+  #         githubReleaseName: ${{ steps.vars.outputs.date }}
+  #         githubReleaseAssets: packages/cli/dist/*.tar.gz
+  #       env:
+  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
