--- a/packages/napi-utils/package.json
+++ b/packages/napi-utils/package.json
@@ -40,6 +40,7 @@
     "targets": [
       "x86_64-apple-darwin",
       "aarch64-apple-darwin",
+      "universal-apple-darwin",
       "x86_64-unknown-linux-gnu"
     ],
     "export-mapping": {
