--- a/packages/napi-utils/package.json
+++ b/packages/napi-utils/package.json
@@ -26,7 +26,7 @@
     "version": "napi version"
   },
   "devDependencies": {
-    "@napi-rs/cli": "3.0.0-alpha.59",
+    "@napi-rs/cli": "2.18.4",
     "ava": "^6.1.3"
   },
   "publishConfig": {
