--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -163,7 +163,7 @@ jobs:
         shell: bash
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: bindings-${{ matrix.settings.target }}
           path: packages/napi-utils/${{ env.APP_NAME }}.*.node
@@ -204,7 +204,7 @@ jobs:
 
       - name: Combine binaries
         working-directory: packages/napi-utils
-        run: npx napi universal@2.18.4
+        run: npx @napi-rs/cli@2.18.4 universal
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -236,7 +236,7 @@ jobs:
         working-directory: packages/napi-utils
 
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           path: packages/napi-utils/artifacts
 
