--- a/packages/napi-utils/package.json
+++ b/packages/napi-utils/package.json
@@ -22,7 +22,6 @@
     "build": "napi build --platform --release && node scope-exports.js",
     "build:debug": "napi build --platform",
     "prepublishOnly": "napi prepublish -t npm",
-    "universal": "napi universal",
     "version": "napi version"
   },
   "devDependencies": {
@@ -43,6 +42,15 @@
       "universal-apple-darwin",
       "x86_64-unknown-linux-gnu"
     ],
+    "triples": {
+      "defaults": false,
+      "additional": [
+        "x86_64-apple-darwin",
+        "aarch64-apple-darwin",
+        "universal-apple-darwin",
+        "x86_64-unknown-linux-gnu"
+      ]
+    },
     "export-mapping": {
       "testing": [
         "runTests"
