--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -209,12 +209,12 @@ jobs:
 
       - name: Rename macOS x64 binary
         run:
-          mv packages/napi-utils/artifacts/bindings-x86_64-apple-darwin
+          mv packages/napi-utils/artifacts/graph-napi-utils.darwin-x64.node
           packages/napi-utils/artifacts/index.darwin-x64.node
 
       - name: Rename macOS arm64 binary
         run:
-          mv packages/napi-utils/artifacts/bindings-aarch64-apple-darwin
+          mv packages/napi-utils/artifacts/graph-napi-utils.darwin-arm64.node
           packages/napi-utils/artifacts/index.darwin-arm64.node
 
       - name: Combine binaries
