--- a/examples/aggregations/package.json
+++ b/examples/aggregations/package.json
@@ -16,11 +16,9 @@
     "deploy-local": "graph deploy example --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020",
     "test": "graph test"
   },
-  "dependencies": {
-    "@graphprotocol/graph-cli": "0.71.2",
-    "@graphprotocol/graph-ts": "^0.32.0"
-  },
   "devDependencies": {
-    "matchstick-as": "0.5.0"
+    "@graphprotocol/graph-cli": "0.89.0",
+    "@graphprotocol/graph-ts": "0.35.1",
+    "matchstick-as": "0.6.0"
   }
 }
