--- a/packages/cli/tests/cli/add/expected/subgraph.yaml
+++ b/packages/cli/tests/cli/add/expected/subgraph.yaml
@@ -32,6 +32,7 @@ dataSources:
     source:
       address: "0x2E645469f354BB4F5c8a05B3b30A929361cf77eC"
       abi: Gravatar
+      startBlock: 6175244
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
