--- a/examples/near-receipts/package.json
+++ b/examples/near-receipts/package.json
@@ -11,9 +11,9 @@
   "scripts": {
     "build": "graph build",
     "codegen": "graph codegen",
-    "create": "graph create example --node https://api.thegraph.com/deploy/",
+    "create": "graph create example --node https://api.studio.thegraph.com/deploy/",
     "create-local": "graph create example --node http://127.0.0.1:8020",
-    "deploy": "graph deploy example --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy": "graph deploy example --ipfs https://api.thegraph.com/ipfs/ --node https://api.studio.thegraph.com/deploy/",
     "deploy-local": "graph deploy example --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
