--- a/examples/ethereum-basic-event-handlers/tsconfig.json
+++ b/examples/ethereum-basic-event-handlers/tsconfig.json
@@ -3,6 +3,6 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "dist",
-  },
+    "outDir": "dist"
+  }
 }
