--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "graphprotocol-tools-monorepo",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/graphprotocol/graph-cli"
@@ -17,8 +18,8 @@
   "scripts": {
     "build": "pnpm --filter=@graphprotocol/graph-* build",
     "lint": "pnpm lint:prettier && pnpm lint:eslint",
-    "lint:eslint": "ESLINT_USE_FLAT_CONFIG=false eslint .",
-    "lint:eslint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint . --fix",
+    "lint:eslint": "eslint .",
+    "lint:eslint:fix": "eslint . --fix",
     "lint:fix": "pnpm lint:prettier:fix && pnpm lint:eslint:fix",
     "lint:prettier": "prettier -c .",
     "lint:prettier:fix": "prettier . --write",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.10",
+    "@eslint/js": "^9.16.0",
     "@theguild/eslint-config": "0.13.1",
     "@theguild/prettier-config": "3.0.0",
     "@types/node": "^22.10.1",
