add local registry fallback

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,6 +16,7 @@
     "bin",
     "dist",
     "oclif.manifest.json",
+    "config/TheGraphNetworksRegistry.json",
     "README.md",
     "!dist/*.tar.gz"
   ],
