add registry json to prettier ignore

--- a/.prettierignore
+++ b/.prettierignore
@@ -5,5 +5,6 @@ generated
 packages/cli/tests/cli/init
 packages/cli/tests/cli/validation
 packages/cli/tests/cli/add
+packages/cli/config/TheGraphNetworksRegistry.json
 pnpm-lock.yaml
 website/src/graphql-env.d.ts
